--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,15 @@
 # for Arctica-Microbiome-Analysis
 # Python 3.6
 
-###### Requirements with version specifiers
+###### Requirements without version specifiers
 # None yet
 
-###### Requirements without version specifiers
-numpy
-scipy
-pandas
-xlrd
-networkx
-matplotlib
+###### Requirements with version specifiers
+numpy==1.13.3
+scipy==0.19.1
+pandas==0.20.3
+xlrd==1.1.0
+networkx==2.0
+matplotlib==2.1.0
+rpy2==2.9.0
 
-
-##### ALSO INSTALL Rpy2 - tricky depending on system
