Initial commit of restructure to python package

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
-output-files
-output-files/**
-r-data-objects
-r-data-objects/**
+# Compiled python modules.
 *.pyc
-.DS_Store
 
+# Setuptools distribution folder
+/dist/
+
+# Python egg metadata, regenerated from source files by setuptools.
+/*.egg-info
+
+# PyCharm files
+/.idea/
+
+# Byte-compiled files
+*/__pycache__/
