--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,9 @@ language: python
 python:
   - "3.5"
   - "3.6"
-addons:
-  apt:
-    sources:
-      - r-packages-precise
-    packages:
-      - r-base
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq r-base
 install:
   - pip install -r requirements.txt
 script:
