--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ install:
   - pip install -r requirements.txt
 script:
   - pytest
+notifications:
+  slack: constrictproject:ARJgSrhVJqdPp6FdzwFxLVqq
